--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
   <!-- Nav CSS -->
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
+   <!-- Header CSS -->
+   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -40,11 +43,21 @@
       <p><b>Write</b> a new tweet </p>
       <i class="fas fa-angle-double-down"></i>
     </div>
-
   </nav>
+  <header>
+    <div>
+        <img src="/images/profile-hex.png"> 
+    </div>
+    <br>
+    <div>
+        <h2>Your Name</h2>
+    </div>
+</header>
 
   <!-- Page-specific (main) content here -->
-  <main class="container"></main>
+  <main class="container">
+    <p> hey </p>
+  </main>
 </body>
 
 </html>
