--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,16 @@
    <!-- Header CSS -->
    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
+   <!-- New-tweet CSS -->
+  <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/client.js"></script>
+
+
 </head>
 
 
@@ -62,8 +67,8 @@
         <label for="tweet-text">What are you humming about?</label>
         <textarea name="text" id="tweet-text"></textarea>
         <div>
-          <button type="submit">Tweet</button>
-          <output name="counter" class="counter" for="tweet-text">140</output>
+         <footer> <button type="submit">Tweet</button>
+          <output name="counter" class="counter" for="tweet-text">140</output> </footer>
         </div>
       </form>
     </section>
