--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
    <!-- New-tweet CSS -->
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
+  <!-- Tweets-container CSS -->
+  <link rel="stylesheet" href="/styles/tweets-container.css" type="text/css" /
+
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -78,8 +81,28 @@
       </form>
     </section>
     <section class="tweets-container">
+      <article class="tweet">
+        <header>
+          <img src="https://i.imgur.com/73hZDYK.png" alt="user avatar">
+          <h3>Cindy Loo</h3>
+          <p class="username">@cindyloo</p>
+        </header>
+        <div class="tweet-content">
+          <p>This is my tweet. I hope you like my content!</p>
+        </div>
+        <footer>
+          <p class="tweet-age">5 days ago</p>
+          <div class="icons">
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </div>
+        </footer>
+      </article>
+      
 
     </section>
+
   </main>
   
 </body>
