--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
       <i class="fas fa-angle-double-down"></i>
     </div>
   </nav>
-  <header>
+  <header class="under-nav my-header">
     <div>
         <img src="/images/profile-hex.png"> 
     </div>
