--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,11 @@
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
   <!-- Tweets-container CSS -->
-  <link rel="stylesheet" href="/styles/tweets-container.css" type="text/css" /
+  <link rel="stylesheet" href="/styles/tweets-container.css" type="text/css" />
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"></script>
 
   
 
@@ -81,7 +82,7 @@
       </form>
     </section>
     <section class="tweets-container">
-      <article class="tweet">
+    <!--  <article class="tweet">
         <header>
           <img src="https://i.imgur.com/73hZDYK.png" alt="user avatar">
           <h3>Cindy Loo</h3>
@@ -98,7 +99,7 @@
             <i class="fas fa-heart"></i>
           </div>
         </footer>
-      </article>
+      </article> --> 
       
 
     </section>
