--- a/public/index.html
+++ b/public/index.html
@@ -81,8 +81,8 @@
         </div>
       </form>
     </section>
-    <section class="tweets-container">
-    <!--  <article class="tweet">
+    <section id="tweets-container">
+   <!-- <article class="tweet">
         <header>
           <img src="https://i.imgur.com/73hZDYK.png" alt="user avatar">
           <h3>Cindy Loo</h3>
@@ -99,7 +99,7 @@
             <i class="fas fa-heart"></i>
           </div>
         </footer>
-      </article> --> 
+      </article> -->
       
 
     </section>
