update validation errors with jquery

--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,7 @@
          <footer> <button type="submit">Tweet</button>
           <output id="counter" class="counter" for="tweet-text">140</output> </footer>
         </div>
+        <div class="error-message"></div>
       </form>
     </section>
     <section id="tweets-container">
