--- a/public/index.html
+++ b/public/index.html
@@ -38,14 +38,14 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"></script>
 
-  
-
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/client.js"></script>
+
   <!-- Char-counter -->
   <script src="/scripts/composer-char-counter.js"></script>
-  
 
+  <!-- Disable viewport zooming -->
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 </head>
 
 
