--- a/public/index.html
+++ b/public/index.html
@@ -58,35 +58,40 @@
       <i class="fas fa-angle-double-down"></i>
     </div>
   </nav>
-  <header class="under-nav my-header">
-    <div>
-        <img src="/images/profile-hex.png"> 
-    </div>
-    <br>
-    <div>
-        <h2>Your Name</h2>
-    </div>
-  </header>
 
-  <!-- Page-specific (main) content here -->
-  <main class="container">
-    <section class="new-tweet">
-      <h2>Compose Tweet</h2>
-      <form>
-        <label for="tweet-text">What are you humming about?</label>
-        <textarea name="text" id="tweet-text"></textarea>
-        <div>
-         <footer class="new-tweet-footer"> 
-            <button type="submit">Tweet</button>
-            <output id="counter" class="counter" for="tweet-text">140</output> 
-        </footer>
-        </div>
-      </form>
-      <div class="error-message"></div>
-    </section>
+  <section class="main-container">
 
-    <section id="tweets-container"></section>
-  </main>
+    <header class="under-nav my-header">
+      <div>
+          <img src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div>
+          <h2>Your Name</h2>
+      </div>
+    </header>
+
+    <!-- Page-specific (main) content here -->
+    <main class="container">
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form>
+          <label for="tweet-text">What are you humming about?</label>
+          <textarea name="text" id="tweet-text"></textarea>
+          <div>
+          <footer class="new-tweet-footer"> 
+              <button type="submit">Tweet</button>
+              <output id="counter" class="counter" for="tweet-text">140</output> 
+          </footer>
+          </div>
+        </form>
+        <div class="error-message"></div>
+      </section>
+
+      <section id="tweets-container"></section>
+    </main>
+
+  </section>
   
 </body>
 
